--- a/app/src/main/res/layout/main_numpad.xml
+++ b/app/src/main/res/layout/main_numpad.xml
@@ -5,7 +5,23 @@
 	android:id="@+id/numpad_container"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:gravity="center_horizontal">
+	android:gravity="center"
+	android:orientation="horizontal">
+
+	<androidx.constraintlayout.widget.ConstraintLayout
+		android:layout_width="250dp"
+		android:layout_height="match_parent">
+
+		<Button
+			android:id="@+id/leftbuttonT9"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="left"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent" />
+	</androidx.constraintlayout.widget.ConstraintLayout>
 
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
@@ -16,12 +32,15 @@
 
 		<LinearLayout
 			android:id="@+id/linearLayout"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
+			android:layout_width="720dp"
+			android:layout_height="270dp"
 			android:orientation="vertical"
+			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintHorizontal_bias="0.0"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent">
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintVertical_bias="1.0">
 
 			<View
 				android:id="@+id/separator_top"
@@ -87,10 +106,26 @@
 				style="@style/numRowSeparator" />
 
 			<include
-				layout="@layout/panel_numpad"
 				android:id="@+id/main_soft_keys"
-				android:paddingBottom="@dimen/numpad_padding_bottom"/>
+				layout="@layout/panel_numpad"
+				android:paddingBottom="@dimen/numpad_padding_bottom" />
 
 		</LinearLayout>
 	</androidx.constraintlayout.widget.ConstraintLayout>
+
+	<androidx.constraintlayout.widget.ConstraintLayout
+		android:layout_width="250dp"
+		android:layout_height="match_parent">
+
+		<Button
+			android:id="@+id/rightbuttonT9"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Right"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent" />
+	</androidx.constraintlayout.widget.ConstraintLayout>
+
 </LinearLayout>
