--- a/app/src/main/res/layout/panel_numpad.xml
+++ b/app/src/main/res/layout/panel_numpad.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
-	tools:showIn="@layout/main_numpad"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:orientation="vertical">
+	android:orientation="vertical"
+	tools:showIn="@layout/main_numpad">
 
 	<!-- Row 1 -->
 	<LinearLayout
-		tools:ignore="HardcodedText,KeyboardInaccessibleWidget"
 		android:layout_width="match_parent"
 		android:layout_height="@dimen/numpad_key_height"
-		android:layoutDirection="ltr">
+		android:layoutDirection="ltr"
+		tools:ignore="HardcodedText,KeyboardInaccessibleWidget">
 
 		<io.github.sspanak.tt9.ui.main.keys.SoftKeySettings
 			android:id="@+id/soft_key_settings"
@@ -32,8 +31,8 @@
 			layout="@layout/panel_numpad_row_1" />
 
 		<include
-			layout="@layout/panel_numpad_text_editing_row_1"
 			android:id="@+id/text_editing_row_1"
+			layout="@layout/panel_numpad_text_editing_row_1"
 			android:visibility="gone" />
 
 		<View
@@ -52,10 +51,10 @@
 
 	<!-- Row 2 -->
 	<LinearLayout
-		tools:ignore="HardcodedText"
 		android:layout_width="match_parent"
 		android:layout_height="@dimen/numpad_key_height"
-		android:layoutDirection="ltr">
+		android:layoutDirection="ltr"
+		tools:ignore="HardcodedText">
 
 		<io.github.sspanak.tt9.ui.main.keys.SoftKeyLF2
 			android:id="@+id/soft_key_add_word"
@@ -73,8 +72,8 @@
 			layout="@layout/panel_numpad_row_2" />
 
 		<include
-			layout="@layout/panel_numpad_text_editing_row_2"
 			android:id="@+id/text_editing_row_2"
+			layout="@layout/panel_numpad_text_editing_row_2"
 			android:visibility="gone" />
 
 		<View
@@ -92,10 +91,10 @@
 
 	<!-- Row 3 -->
 	<LinearLayout
-		tools:ignore="HardcodedText"
 		android:layout_width="match_parent"
 		android:layout_height="@dimen/numpad_key_height"
-		android:layoutDirection="ltr">
+		android:layoutDirection="ltr"
+		tools:ignore="HardcodedText">
 
 		<io.github.sspanak.tt9.ui.main.keys.SoftInputModeKey
 			android:id="@+id/soft_key_input_mode"
@@ -115,8 +114,8 @@
 			layout="@layout/panel_numpad_row_3" />
 
 		<include
-			layout="@layout/panel_numpad_text_editing_row_3"
 			android:id="@+id/text_editing_row_3"
+			layout="@layout/panel_numpad_text_editing_row_3"
 			android:visibility="gone" />
 
 		<View
@@ -135,10 +134,10 @@
 
 	<!-- Row 4 -->
 	<LinearLayout
-		tools:ignore="HardcodedText"
 		android:layout_width="match_parent"
 		android:layout_height="@dimen/numpad_key_height"
-		android:layoutDirection="ltr">
+		android:layoutDirection="ltr"
+		tools:ignore="HardcodedText">
 
 		<io.github.sspanak.tt9.ui.main.keys.SoftKeyNextLanguage
 			android:id="@+id/soft_key_language"
@@ -163,11 +162,11 @@
 		<io.github.sspanak.tt9.ui.main.keys.SoftOkKey
 			android:id="@+id/soft_key_ok"
 			style="@android:style/Widget.Holo.Button.Borderless"
-			tools:ignore="ButtonOrder"
 			android:layout_width="0dp"
 			android:layout_height="match_parent"
 			android:layout_weight="@dimen/numpad_control_key_layout_weight"
-			android:text="OK" />
+			android:text="OK"
+			tools:ignore="ButtonOrder" />
 
 	</LinearLayout>
 </LinearLayout>
