--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
 	<!-- Light theme -->
 	<color name="button_text">#242424</color>
 
-	<color name="candidate_background">#FF0000</color>
+	<color name="candidate_background">#D3D3D3</color>
 	<color name="candidate_color">#202020</color>
 	<color name="candidate_selected">#B8B8B8</color>
 	<color name="candidate_separator">#888888</color>
