--- a/app/src/main/res/layout/panel_numpad_row_1.xml
+++ b/app/src/main/res/layout/panel_numpad_row_1.xml
@@ -6,7 +6,8 @@
 		android:layout_width="0dp"
 		android:layout_height="match_parent"
 		android:layout_weight="1"
-		android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+		android:textAppearance="@style/TextAppearance.AppCompat.Large"
+		android:background="@drawable/button_border" />
 
 	<io.github.sspanak.tt9.ui.main.keys.SoftNumberKey
 		android:id="@+id/soft_key_2"
@@ -14,7 +15,8 @@
 		android:layout_width="0dp"
 		android:layout_height="match_parent"
 		android:layout_weight="1"
-		android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+		android:textAppearance="@style/TextAppearance.AppCompat.Large"
+		android:background="@drawable/button_border" />
 
 	<io.github.sspanak.tt9.ui.main.keys.SoftNumberKey
 		android:id="@+id/soft_key_3"
@@ -22,5 +24,6 @@
 		android:layout_width="0dp"
 		android:layout_height="match_parent"
 		android:layout_weight="1"
-		android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+		android:textAppearance="@style/TextAppearance.AppCompat.Large"
+		android:background="@drawable/button_border" />
 </merge>
