--- a/app/src/main/res/layout/panel_numpad_row_3.xml
+++ b/app/src/main/res/layout/panel_numpad_row_3.xml
@@ -6,6 +6,7 @@
 		android:layout_width="0dp"
 		android:layout_height="match_parent"
 		android:layout_weight="1"
+		android:background="@drawable/button_border"
 		android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
 	<io.github.sspanak.tt9.ui.main.keys.SoftNumberKey
@@ -14,6 +15,7 @@
 		android:layout_width="0dp"
 		android:layout_height="match_parent"
 		android:layout_weight="1"
+		android:background="@drawable/button_border"
 		android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
 	<io.github.sspanak.tt9.ui.main.keys.SoftNumberKey
@@ -22,5 +24,6 @@
 		android:layout_width="0dp"
 		android:layout_height="match_parent"
 		android:layout_weight="1"
+		android:background="@drawable/button_border"
 		android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 </merge>
