Reallign button to optimal positions action buttons (click & hold) are positioned more towards to centre while keeping left&up combo on left and down&right combo on the right

--- a/app/src/main/res/drawable/circle_dot.xml
+++ b/app/src/main/res/drawable/circle_dot.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-	<solid android:color="#FF0000" /> <!-- Red color, change to desired color -->
+	<solid android:color="#f2a333" /> <!-- Red color, change to desired color -->
 	<corners android:radius="500dp" /> <!-- Half of the size to make it a perfect circle -->
 </shape>
 
